# CalciumKit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
CalciumKit/: __init__.py  behavior.py  kalman.py
tests/: test_behavior.py  test_kalman.py
