[project]
name = "CalciumKit"
version = "0.0.0"
description = "A toolkit for various calcium imaging and related behavioral analyses."
authors = [{ name = "Ryan Senne", email = "rsenne@bu.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "jax",
    "jaxlib",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["CalciumKit"]
